versioned_docs/version-1.0/deeper-concepts/formatting-values.md
---
id: formatting
description: Understanding how to format numeric values in Deneb
slug: /formatting
---

# Formatting Values

## Default Formatting Behavior

When it comes to formatting values (if you're just using simple encodings), then Vega or Vega-Lite will use its own deterministic behavior to figure out things like decimal precision or other elements.

You can provide your own overrides to these wherever they are used. [Vega](https://vega.github.io/vega/docs/api/locale/) and [Vega-Lite](https://vega.github.io/vega-lite/docs/format.html) both use the D3 formatting convention for [numbers](https://github.com/d3/d3-format) and [date & time](https://github.com/d3/d3-time-format) values (incidentally, so does [Charticulator](https://charticulator.com/docs/user-interaction.html#text-formatting)).

Power BI [has its own syntax](https://docs.microsoft.com/en-us/power-bi/create-reports/desktop-custom-format-strings?WT.mc_id=DP-MVP-5003712#supported-custom-format-syntax), which is probably your preference for applying any customized formatting strings into a specification.

To ensure correct compatibility with Vega and Vega-Lite, particularly if you're bringing examples in (or even looking to take them out!) Deneb will use the D3 convention by default, but there's some help at hand if that's not your preference.

## Power BI Custom Formatter

If you prefer working with Power BI format strings, Deneb has a [custom format type](https://vega.github.io/vega-lite/docs/config.html#custom-format-type) named `pbiFormat` that you can use in lieu of the D3 format convention.

## Vega-Lite Implementation

In Vega-Lite, we can specify `"pbiFormat"` as a `formatType` wherever you're specifying a `format`.

#### Quantitative Axis Example

Let's say we have a simple bar chart that uses the Power BI financial sample dataset, which shows `[$ Sales]` for each `[Country]`:

```json
{
  "data": {
    "name": "dataset"
  },
  "mark": {
    "type": "bar"
  },
  "encoding": {
    "y": {
      "field": "Country",
      "type": "nominal"
    },
    "x": {
      "field": "$ Sales",
      "type": "quantitative"
    }
  }
}
```

And this will result in the following output:

![vega-lite-default.png](./img/vega-lite-default.png "Simple bar chart using Financial sample dataset (with [$ Sales] as a measure). The measure axis displays raw values, with a maximum of 1,000,000,000.")

That's a lot of zeroes! What might be nicer is if his were a little easier to read. If we want to use a Power BI format string for this, we can modify the specification as follows to show values in $bn to one decimal place (changes highlighted):

```json highlight={8-11}
{
  ...
  "encoding": {
    ...
    "x": {
      "field": "$ Sales",
      "type": "quantitative",
      "axis": {
        "format": "$#0,,,.0bn",
        "formatType": "pbiFormat"
      }
    }
  }
}
```

This results in something a little more human-readable:

![vega-lite-billions.png](./img/vega-lite-billions.png "After applying a Power BI format string and specifying our custom formatter, the axis becomes much more human readable. This updates to show tick values as $bn, to one decimal place.")

#### Quantitative & Temporal Axes Example

If instead, we had a line chart using the same dataset, but this time we wanted to plot `[$ Sales]` by `[Date]` then we could express this as follows:

```json{
  "data": {
    "name": "dataset"
  },
  "mark": {
    "type": "line"
  },
  "encoding": {
    "x": {
      "field": "Date",
      "type": "temporal"
    },
    "y": {
      "field": "$ Sales",
      "type": "quantitative"
    }
  }
}
```

And here's how it looks out of the gate:

![vega-lite-line-default.png](./img/vega-lite-line-default.png "Simple line chart using Financial sample dataset (with [$ Sales] as a measure and [Date] along the x-axis). The measure axis displays raw values, with a maximum of just over 400,000,000.")

We could use a similar approach as above for both axes, to get them how we want (changes highlighted):

```json {6-9,13-16}
{
  ...
  "encoding": {
    "x": {
      ...
      "axis": {
        "format": "MMM yyyy",
        "formatType": "pbiFormat"
      }
    },
    "y": {
      ...
      "axis": {
        "format": "$#0,,,.0bn",
        "formatType": "pbiFormat"
      }
    }
  }
}
```

And now, we have both axes formatted as we like:

![vega-lite-line-formatted.png](./img/vega-lite-line-formatted.png "After specifying format strings and the Power BI custom formatter for both axes, the specification updates as required.")

## Vega Implementation

If using Vega, you'd call the custom formatter in lieu of the [format](https://vega.github.io/vega/docs/expressions/#format) expression, e.g. for an axis tick label:

```json highlight={10}
{
  ...
  "axes": [
    {
      ...
      "encode": {
        "labels": {
          "update": {
            "text": {
              "signal": "pbiFormat(datum.value, '$#0,,,.0bn')"
            }
          }
        }
      }
    },
    ...
  ],
  ...
}
```

## Locale-Awareness

If using the `pbiFormat` formatter, Deneb currently will resolve your locale [according to your Power BI configuration](https://docs.microsoft.com/en-us/power-bi/fundamentals/supported-languages-countries-regions?WT.mc_id=DP-MVP-5003712#choose-the-language-or-locale-of-power-bi-desktop) for any values.

For example, we can view the live chart example from above _en français_ (fr-FR), and the formatting strings will work as expected:

![vega-lite-line-fr-FR.png](./img/vega-lite-line-fr-FR.png "If we are in a different locale, e.g. French, then our [$ Sales] and [Date] format string update to use locale-specific decimal separators and month naming.")
